force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/breg_WEB_WEB_FILING_YEARS__c.object-meta.xml
<CustomObject>
    <label>WEB FILING YEARS</label>
    <nameField>
        <label>WEB FILING YEARS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB FILING YEARSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>