force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_Filing_Year_formula__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Year_formula__c</fullName>
    <formula>SUBSTITUTE(TEXT(breg_WEB_FILING_YEAR__c), &quot;,&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filing Year</label>
    <type>Text</type>
</CustomField>