force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_WEB_COLUMN_NAME__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_COLUMN_NAME__c</fullName>
    <label>COLUMN NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>