force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_WEB_DUE_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_DUE_DT__c</fullName>
    <label>DUE DT</label>
    <type>Date</type>
</CustomField>