force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_WEB_External_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>WEB External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>