force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_WEB_FILING_YEAR_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_FILING_YEAR_ID__c</fullName>
    <externalId>true</externalId>
    <label>FILING YEAR ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>