force-app/main/default/objects/breg_WEB_WEB_FILING_YEARS__c/fields/breg_WEB_PENALTY__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_PENALTY__c</fullName>
    <label>PENALTY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>